RESOLVED FIXED259008
[iOS 17] Unable to show text alternatives when tapping grammatical error in Mail compose
https://bugs.webkit.org/show_bug.cgi?id=259008
Summary [iOS 17] Unable to show text alternatives when tapping grammatical error in M...
Wenson Hsieh
Reported 2023-07-07 17:57:53 PDT
Attachments
Wenson Hsieh
Comment 1 2023-07-07 18:14:30 PDT
EWS
Comment 2 2023-07-08 12:29:33 PDT
Committed 265880@main (e4ff4c63704c): <https://commits.webkit.org/265880@main> Reviewed commits have been landed. Closing PR #15661 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.